# xarm6_octomap_avoidance

./: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.sh
io/: param.yaml
launch/: bk_full_system.launch  full_system.launch  layers_octomap.launch  octomap_mapping.launch  publish_dynamic_octomap.launch  publish_object_octomap.launch  publish_static_octomap.launch  sensor_self_filter.launch  xarm6_bringup.launch
rviz/: xarm6_octomap_avoidance.rviz
scripts/: autonomous_workspace_recognition.py  mapping_move.py  publish_octomap_to_moveit.py  test_yolo.py
scripts/bk/: bk_publish_octomap_to_moveit.py
scripts/node/: convert_octomap_to_collision_object.py  mapping_move.py  publish_collision_object_to_moveit.py  publish_octomap_to_moveit.py  yolo_to_collision_object.py
scripts/test/: test_yolo.py
tmux/: layers_octomap_with_xarm6.sh
